# genshin-calc

./: .claudeignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  character_status.md  genshin_export_2026-03-31_13-17.json
.claude/: settings.json
.claude/hooks/: lsp-verify.sh  quality-gate.sh  rust-check.sh  rust-fmt.sh
.claude/rules/: conventions.md
.github/workflows/: claude.yml  release.yml
crates/core/: Cargo.toml  README.md
crates/core/examples/: basic_damage.rs  reactions.rs
crates/core/src/: buff_types.rs  damage.rs  em.rs  enemy.rs  error.rs  level_table.rs  lib.rs  lunar.rs  moonsign.rs  reaction.rs  resonance.rs  stat_profile.rs  stats.rs  team.rs  transformative.rs  types.rs
crates/core/tests/: character_verification.rs  elemental_crit_dmg.rs  generate_expected.rs  issue_142_moonsign_context_on_team_result.rs  issue_143_moonsign_enhancement_pipeline.rs  moonsign_integration.rs  test_types.rs
crates/core/tests/data/characters/: aino.toml  albedo.toml  alhaitham.toml  aloy.toml  amber.toml  arlecchino.toml  ayaka.toml  ayato.toml  baizhu.toml  barbara.toml  beidou.toml  bennett.toml  candace.toml  charlotte.toml  chasca.toml  chevreuse.toml  chiori.toml  chongyun.toml  citlali.toml  clorinde.toml  collei.toml  columbina.toml  cyno.toml  dahlia.toml  dehya.toml  diluc.toml  diona.toml  dori.toml  durin.toml  emilie.toml  escoffier.toml  eula.toml  faruzan.toml  fischl.toml  flins.toml  freminet.toml  furina.toml  gaming.toml  ganyu.toml  gorou.toml  (+71 more)
crates/data/: Cargo.toml  README.md
crates/data/examples/: amber_test.rs  bennett_test.rs  search.rs
crates/data/src/: artifact_stats.rs  artifacts.rs  buff.rs  enemies.rs  lib.rs  moonsign_chars.rs  nightsoul_chars.rs  talent_buffs.rs  team_builder.rs  types.rs
crates/data/src/characters/: anemo.rs  cryo.rs  dendro.rs  electro.rs  geo.rs  hydro.rs  mod.rs  pyro.rs
crates/data/src/characters/anemo/: chasca.rs  faruzan.rs  heizou.rs  ifa.rs  jahoda.rs  jean.rs  kazuha.rs  lan_yan.rs  lynette.rs  mizuki.rs  mod.rs  sayu.rs  sucrose.rs  varka.rs  venti.rs  wanderer.rs  xianyun.rs  xiao.rs
crates/data/src/characters/cryo/: aloy.rs  ayaka.rs  charlotte.rs  chongyun.rs  citlali.rs  diona.rs  escoffier.rs  eula.rs  freminet.rs  ganyu.rs  kaeya.rs  layla.rs  mika.rs  mod.rs  qiqi.rs  rosaria.rs  shenhe.rs  skirk.rs  wriothesley.rs
crates/data/src/characters/dendro/: alhaitham.rs  baizhu.rs  collei.rs  emilie.rs  kaveh.rs  kinich.rs  kirara.rs  lauma.rs  mod.rs  nahida.rs  nefer.rs  tighnari.rs  traveler_dendro.rs  yaoyao.rs
crates/data/src/characters/electro/: beidou.rs  clorinde.rs  cyno.rs  dori.rs  fischl.rs  flins.rs  iansan.rs  ineffa.rs  keqing.rs  kujou_sara.rs  kuki_shinobu.rs  lisa.rs  mod.rs  ororon.rs  raiden_shogun.rs  razor.rs  sethos.rs  varesa.rs  yae_miko.rs
crates/data/src/characters/geo/: albedo.rs  chiori.rs  gorou.rs  illuga.rs  itto.rs  kachina.rs  mod.rs  navia.rs  ningguang.rs  noelle.rs  xilonen.rs  yun_jin.rs  zhongli.rs  zibai.rs
crates/data/src/characters/hydro/: aino.rs  ayato.rs  barbara.rs  candace.rs  columbina.rs  dahlia.rs  furina.rs  kokomi.rs  mod.rs  mona.rs  mualani.rs  neuvillette.rs  nilou.rs  sigewinne.rs  tartaglia.rs  xingqiu.rs  yelan.rs
crates/data/src/characters/pyro/: amber.rs  arlecchino.rs  bennett.rs  chevreuse.rs  dehya.rs  diluc.rs  durin.rs  gaming.rs  hu_tao.rs  klee.rs  lyney.rs  mavuika.rs  mod.rs  thoma.rs  xiangling.rs  xinyan.rs  yanfei.rs  yoimiya.rs
crates/data/src/talent_buffs/: anemo.rs  cryo.rs  dendro.rs  electro.rs  geo.rs  hydro.rs  mod.rs  pyro.rs
crates/data/src/weapons/: bow.rs  catalyst.rs  claymore.rs  mod.rs  polearm.rs  sword.rs
crates/data/tests/: core_integration.rs  data_integrity.rs  dual_scaling_regressions.rs  issue_100_105_cryo_hydro.rs  issue_106_113_electro_anemo.rs  issue_114_121_pyro_geo.rs  issue_122_126_geo_dendro.rs  issue_127_130_dendro_cryo_hydro.rs  issue_139_damage_pipeline.rs  issue_140_passive_scalings.rs  issue_141_scaling_modifiers.rs  issue_144_flins_a1_dedupe.rs  issue_70_geo_dendro_passives.rs  issue_71_other_passives.rs  issue_72_elemental_crit_dmg.rs  issue_73_cleanup.rs  issue_74_collei_c6.rs  issue_75_zibai_additional_hit.rs  issue_76_fischl_c6_hexerei.rs  issue_77_varka_lyrical_libation.rs  issue_78_yun_jin_charged.rs  issue_79_xilonen_ascension.rs  issue_80_faruzan_burst_scaling.rs  issue_81_single_scalings.rs  issue_82_shenhe_scaling.rs  issue_83_qiqi_jahoda_scalings.rs  issue_84_candace_ayato_scalings.rs  issue_86_diluc_scaling.rs  issue_87_itto_scaling_c6.rs  issue_88_yoimiya.rs  issue_89_thoma_n4.rs  issue_90_ineffa_ascension_stat.rs  issue_91_sethos_burst_scaling.rs  issue_92_iansan_skill_lv9.rs  issue_93_varesa_burst_charged_values.rs  issue_94_alhaitham.rs  issue_95_nahida.rs  issue_96_constellation_patterns.rs  issue_97_nilou.rs  issue_98_mona.rs  (+7 more)
crates/good/: Cargo.toml  README.md
crates/good/examples/: demo.rs
crates/good/src/: build_stats.rs  convert.rs  error.rs  evaluate_talent_buffs.rs  key_map.rs  lib.rs  stat_map.rs  types.rs
crates/good/tests/: evaluate_talent_buffs_integration.rs  test_convert.rs  test_key_map.rs  test_parse.rs  test_stat_map.rs
crates/good/tests/data/: minimal.json  two_piece_two_piece.json
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: convert.rs  lib.rs
crates/wasm/ts/: types.ts
docs/: api-issues.md  data-expansion-todo.md  v6.0-6.3-data-update-todo.md
docs/audit/: SUMMARY.md  anemo.md  anemo_audit.md  anemo_buffs_audit.md  artifact_buffs_audit.md  cryo.md  cryo_audit.md  cryo_buffs_audit.md  dendro.md  dendro_audit.md  dendro_buffs_audit.md  electro.md  electro_audit.md  electro_buffs_audit.md  geo.md  geo_audit.md  geo_buffs_audit.md  hydro.md  hydro_audit.md  hydro_buffs_audit.md  pyro.md  pyro_audit.md  pyro_buffs_audit.md
docs/data/: artifacts.md  characters.md  enemies.md  moonsign.md  talent-buffs.md  weapons.md
docs/dev/: architecture.md  character-data-guide.md  testing.md
docs/superpowers/: 2026-03-31-wasm-todo.md
sample/: genshin_export_2026-04-16_09-50.json
scripts/: build-wasm.sh
(+1053 files in other folders)
