[package]
name = "genshin-calc-core"
version = "0.5.13"
edition = "2024"
description = "Genshin Impact damage calculation engine"
license = "MIT"
authors = ["kotenbu135"]
repository = "https://github.com/kotenbu135135/genshin-calc"
keywords = ["genshin-impact", "damage-calculator", "game", "wasm"]
categories = ["game-engines", "algorithms"]
exclude = ["tests/"]
rust-version = "1.85"
readme = "README.md"

[features]
default = ["descriptions"]
descriptions = []

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
toml = "0.8"
glob = "0.3"
