[package]
name = "genshin-calc-data"
version = "0.6.0"
edition = "2024"
description = "Genshin Impact game data for genshin-calc"
license = "MIT"
authors = ["kotenbu135135"]
repository = "https://github.com/kotenbu135135/genshin-calc"
keywords = ["genshin-impact", "game-data", "damage-calculator", "wasm"]
categories = ["game-engines", "data-structures"]
rust-version = "1.85"
readme = "README.md"

[features]
default = ["descriptions"]
descriptions = ["genshin-calc-core/descriptions"]

[dependencies]
genshin-calc-core = { version = "0.6.0", path = "../core", default-features = false }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
glob = "0.3"
serde_json = "1"

[lints.clippy]
# Game data constants may coincidentally match mathematical constants (e.g. PI).
# These are domain-specific values, not approximations.
approx_constant = "allow"
