[package]
name = "genshin-calc-good"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "GOOD (Genshin Open Object Description) format importer for genshin-calc"

[dependencies]
genshin-calc-core = { path = "../core" }
genshin-calc-data = { path = "../data" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
