[package]
name = "genshin-calc-good"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "GOOD (Genshin Open Object Description) format importer for genshin-calc"
authors = ["kotenbu"]
repository = "https://github.com/kotenbu/genshin-calc"
keywords = ["genshin-impact", "good-format", "damage-calculator", "import"]
categories = ["game-engines", "parser-implementations"]
readme = "README.md"

[dependencies]
genshin-calc-core = { path = "../core", version = "0.2.2" }
genshin-calc-data = { path = "../data", version = "0.2.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dev-dependencies]
serde_json = "1"
