[package]
name = "genshin-calc-good"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "GOOD (Genshin Open Object Description) format importer for genshin-calc"
authors = ["kotenbu135"]
repository = "https://github.com/kotenbu135/genshin-calc"
keywords = ["genshin-impact", "good-format", "damage-calculator", "import"]
categories = ["game-engines", "parser-implementations"]
readme = "README.md"

[dependencies]
genshin-calc-core = { path = "../core", version = "0.6.0", default-features = false }
genshin-calc-data = { path = "../data", version = "0.6.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dev-dependencies]
serde_json = "1"
