[package]
name = "genshin-calc-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for genshin-calc damage calculator"
license = "MIT"
authors = ["kotenbu"]
repository = "https://github.com/kotenbu/genshin-calc"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
genshin-calc-core = { version = "0.1.0", path = "../core" }
genshin-calc-data = { version = "0.1.0", path = "../data" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
serde_json = "1"
