[package]
name = "genshin-calc-wasm"
version = "0.5.13"
edition = "2024"
description = "WASM bindings for genshin-calc damage calculator"
license = "MIT"
authors = ["kotenbu135"]
repository = "https://github.com/kotenbu135/genshin-calc"
rust-version = "1.85"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
genshin-calc-core = { version = "0.5.13", path = "../core", default-features = false }
genshin-calc-data = { version = "0.5.13", path = "../data", default-features = false }
genshin-calc-good = { version = "0.5.13", path = "../good" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
serde_json = "1"
